exports[`createOppilaitos > should be able to create oppilaitos #0`] =
{
  "kielivalinta": [
    "fi"
  ],
  "metadata": {
    "akatemioita": 7,
    "esittely": {
      "fi": "<p>Esittely</p>"
    },
    "kampuksia": 4,
    "korkeakouluja": 2,
    "opiskelijoita": 1,
    "tiedekuntia": 3,
    "tietoaOpiskelusta": [
      {
        "otsikkoKoodiUri": "organisaationkuvaustiedot_0#1",
        "teksti": {
          "fi": "Tietoa"
        }
      }
    ],
    "toimipisteita": 6,
    "yhteystiedot": {
      "osoite": {
        "osoite": {
          "fi": "Osoite"
        },
        "postinumeroKoodiUri": "posti_0#2"
      },
      "puhelinnumero": {
        "fi": "12345"
      },
      "sahkoposti": {
        "fi": "sahkoposti@sahkoposti.fi"
      },
      "wwwSivu": {
        "fi": "www.verkkosivu.fi"
      }
    },
    "yksikoita": 5
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "oid": "1.1.1.1.1.1",
  "organisaatioOid": "1.1.1.1.1.1",
  "tila": "julkaistu"
};

exports[`editOppilaitos > should be able to edit oppilaitos #0`] =
{
  "kielivalinta": [
    "fi"
  ],
  "metadata": {
    "akatemioita": 1,
    "esittely": {
      "fi": "<p><em>Fi esittely</em></p>"
    },
    "kampuksia": 3,
    "korkeakouluja": 5,
    "opiskelijoita": 100,
    "tiedekuntia": 4,
    "tietoaOpiskelusta": [
      {
        "otsikkoKoodiUri": "organisaationkuvaustiedot_0#1",
        "teksti": {
          "fi": "Fi tiedot"
        }
      }
    ],
    "toimipisteita": 9,
    "yhteystiedot": {
      "osoite": {
        "osoite": {
          "fi": "Fi osoite"
        },
        "postinumeroKoodiUri": "posti_0#2"
      },
      "puhelinnumero": {
        "fi": "1234"
      },
      "sahkoposti": {
        "fi": "fi@sahkoposti.fi"
      },
      "wwwSivu": {
        "fi": "www.verkkosivu.fi"
      }
    },
    "yksikoita": 2
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "oid": "1.1.1.1.1.1",
  "organisaatioOid": "1.1.1.1.1.1",
  "tila": "tallennettu"
};
